# armored-core-sdl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: core.c  core.h  main.c
